# pynamo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml
docs/source/: attribute.rst  conf.py  index.rst  installation.rst  models.rst  tables.rst  usage.rst
src/pynamo/: __init__.py  _conversion.c  _conversion.pyi  _pynamo.pyi  attribute.py  constants.py  expression.py  fields.py  get_item.py  limits.py  model.py  put_item.py  session.py  table.py  update_item.py
src/pynamo/_pynamo/: deserialize_decimal.c  deserialize_integer.c  deserialize_parallel.c  extract_dynamodb_value.c  pynamo.c  pynamo.h
src/pynamo/op/: __init__.py  base.py  delete_item.py  get_item.py  put_item.py  query.py  transact_write_items.py  update_item.py
tests/: test_attribute.py  test_delete_item.py  test_fields.py  test_get_item.py  test_model.py  test_put_item.py  test_query.py  test_session.py  test_session_async.py  test_table.py  test_update_item.py
tests/fields/: test_field_boolean.py  test_field_date.py  test_field_datetime.py  test_field_decimal.py  test_field_float.py  test_field_integer.py  test_field_string.py  test_field_uuid.py
