[project]
name = "pynamo"
version = "0.1.0"
description = "A dynamodb ORM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "furo>=2024.8.6",
    "mypy>=1.15.0",
    "pytest-coverage>=0.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "setuptools>=76.0.0",
    "sphinx>=7.4.7",
]

[tool.ruff]
line-length = 80

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pynamo"]
