[project]
name = "pynamo"
version = "0.1.0"
description = "A dynamodb ORM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "furo>=2024.8.6",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.26.0",
    "pytest-coverage>=0.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=7.4.7",
]

[tool.ruff]
line-length = 80
fix = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
]

[tool.mypy]
strict = true

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
